reflect-demo/tests/errors/invalid_reflect_attribute_path2.stderr
error: failed to parse type reference path: ""
 --> tests/errors/invalid_reflect_attribute_path2.rs:3:32
  |
3 |     #[reflect(serialize_type = "")]
  |                                ^^
